first training of WGAN

--- a/GAN3_WGAN.ipynb
+++ b/GAN3_WGAN.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "9b2cUJPmV9Pp"
       },
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "pxstObIYWDAR"
       },
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "E9iZ7QTSbHRF"
       },
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "yEgcEqjTbJ6_"
       },
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "GP0sD2SMbNWd"
       },
@@ -137,13 +137,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ECiXa6NDbPBA",
-        "outputId": "e38ae305-00d9-4e89-9085-c5e6ad9404f4"
+        "outputId": "339d2871-7474-4fd6-8dc9-31112531d711"
       },
       "outputs": [
         {
@@ -161,7 +161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "98Pqx4yRbP30"
       },
@@ -173,7 +173,7 @@
         "IMAGE_SIZE = 64\n",
         "CHANNELS_IMG = 3\n",
         "NOISE_DIM = 128\n",
-        "EPOCHS = 3\n",
+        "EPOCHS = 250\n",
         "FEATURES_DISC = 64\n",
         "FEATURES_GEN = 64\n",
         "CRITIC_ITERATIONS = 5\n",
@@ -182,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "_S90hl8gbxzL"
       },
@@ -201,13 +201,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Plh5HsOB-nEf",
-        "outputId": "af719cac-636d-448a-ac2b-43126cdc32c6"
+        "outputId": "95ac493a-87ab-4fb9-c088-a224969be02d"
       },
       "outputs": [
         {
@@ -225,13 +225,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "NRU5eAap-s5C",
-        "outputId": "ee8e77fa-0024-43c7-af6f-5763d628c46a"
+        "outputId": "b6cf6bc6-786f-457e-ab83-6553792ba406"
       },
       "outputs": [
         {
@@ -252,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "0pWjZqPc-3Ia"
       },
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "Vkolr2Go-5OQ"
       },
@@ -283,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "h6YloVqk_Mp7"
       },
@@ -298,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "yHec7SK4_Jjl"
       },
@@ -324,7 +324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "swSA6B7nbx-3"
       },
@@ -339,13 +339,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "j3xeYGQXb19U",
-        "outputId": "a29e2696-0de6-4a73-8e0d-1f98d32a2635"
+        "outputId": "fff46ab0-61ab-4cc5-f74c-f18e437140b1"
       },
       "outputs": [
         {
@@ -368,26 +368,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "wUHbmY3-cIwC"
       },
       "outputs": [],
       "source": [
-        "fixed_noise = torch.randn(32, NOISE_DIM, 1,1).to(device)\n",
-        "writer_fake = SummaryWriter(f\"logs/fake\")\n",
-        "writer_real = SummaryWriter(f\"logs/real\")"
+        "fixed_noise = torch.randn(32, NOISE_DIM, 1,1).to(device)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
+        "id": "a99Lo5Gr_q5i",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "a99Lo5Gr_q5i",
-        "outputId": "73571eed-5c1e-4190-bbdf-17ff7864b7f6"
+        "outputId": "a9000702-b2f2-4054-aac9-80c4d08148db"
       },
       "outputs": [
         {
@@ -397,32 +395,32 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting wandb\n",
             "  Downloading wandb-0.13.1-py2.py3-none-any.whl (1.8 MB)\n",
-            "\u001b[K     |████████████████████████████████| 1.8 MB 30.9 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: six>=1.13.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (1.15.0)\n",
-            "Collecting docker-pycreds>=0.4.0\n",
-            "  Downloading docker_pycreds-0.4.0-py2.py3-none-any.whl (9.0 kB)\n",
-            "Requirement already satisfied: protobuf<4.0dev,>=3.12.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (3.17.3)\n",
-            "Collecting GitPython>=1.0.0\n",
-            "  Downloading GitPython-3.1.27-py3-none-any.whl (181 kB)\n",
-            "\u001b[K     |████████████████████████████████| 181 kB 60.2 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: Click!=8.0.0,>=7.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (7.1.2)\n",
-            "Collecting setproctitle\n",
-            "  Downloading setproctitle-1.3.1-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (30 kB)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from wandb) (57.4.0)\n",
+            "\u001b[K     |████████████████████████████████| 1.8 MB 25.5 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: requests<3,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.23.0)\n",
             "Requirement already satisfied: promise<3,>=2.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.3)\n",
-            "Collecting pathtools\n",
-            "  Downloading pathtools-0.1.2.tar.gz (11 kB)\n",
-            "Requirement already satisfied: requests<3,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.23.0)\n",
-            "Requirement already satisfied: psutil>=5.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (5.4.8)\n",
             "Collecting sentry-sdk>=1.0.0\n",
             "  Downloading sentry_sdk-1.9.2-py2.py3-none-any.whl (157 kB)\n",
-            "\u001b[K     |████████████████████████████████| 157 kB 70.6 MB/s \n",
-            "\u001b[?25hCollecting shortuuid>=0.5.0\n",
+            "\u001b[K     |████████████████████████████████| 157 kB 54.9 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: protobuf<4.0dev,>=3.12.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (3.17.3)\n",
+            "Collecting shortuuid>=0.5.0\n",
             "  Downloading shortuuid-1.0.9-py3-none-any.whl (9.4 kB)\n",
+            "Requirement already satisfied: six>=1.13.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (1.15.0)\n",
+            "Collecting docker-pycreds>=0.4.0\n",
+            "  Downloading docker_pycreds-0.4.0-py2.py3-none-any.whl (9.0 kB)\n",
+            "Collecting GitPython>=1.0.0\n",
+            "  Downloading GitPython-3.1.27-py3-none-any.whl (181 kB)\n",
+            "\u001b[K     |████████████████████████████████| 181 kB 73.0 MB/s \n",
+            "\u001b[?25hCollecting pathtools\n",
+            "  Downloading pathtools-0.1.2.tar.gz (11 kB)\n",
+            "Requirement already satisfied: Click!=8.0.0,>=7.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (7.1.2)\n",
+            "Collecting setproctitle\n",
+            "  Downloading setproctitle-1.3.1-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (30 kB)\n",
             "Requirement already satisfied: PyYAML in /usr/local/lib/python3.7/dist-packages (from wandb) (3.13)\n",
+            "Requirement already satisfied: psutil>=5.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (5.4.8)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from wandb) (57.4.0)\n",
             "Collecting gitdb<5,>=4.0.1\n",
             "  Downloading gitdb-4.0.9-py3-none-any.whl (63 kB)\n",
-            "\u001b[K     |████████████████████████████████| 63 kB 1.7 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 63 kB 2.3 MB/s \n",
             "\u001b[?25hRequirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.7/dist-packages (from GitPython>=1.0.0->wandb) (4.1.1)\n",
             "Collecting smmap<6,>=3.0.1\n",
             "  Downloading smmap-5.0.0-py3-none-any.whl (24 kB)\n",
@@ -432,12 +430,12 @@
             "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (3.0.4)\n",
             "Collecting sentry-sdk>=1.0.0\n",
             "  Downloading sentry_sdk-1.9.1-py2.py3-none-any.whl (157 kB)\n",
-            "\u001b[K     |████████████████████████████████| 157 kB 77.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 157 kB 76.3 MB/s \n",
             "\u001b[?25h  Downloading sentry_sdk-1.9.0-py2.py3-none-any.whl (156 kB)\n",
-            "\u001b[K     |████████████████████████████████| 156 kB 79.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 156 kB 57.1 MB/s \n",
             "\u001b[?25hBuilding wheels for collected packages: pathtools\n",
             "  Building wheel for pathtools (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pathtools: filename=pathtools-0.1.2-py3-none-any.whl size=8806 sha256=f4bae658a93d3079c18520576e290e5493e6994f61535855f393030a8fbf62b4\n",
+            "  Created wheel for pathtools: filename=pathtools-0.1.2-py3-none-any.whl size=8806 sha256=4b94c830f943e19ffc040e57427f74317874009d572832ff3b8cc418ccba599f\n",
             "  Stored in directory: /root/.cache/pip/wheels/3e/31/09/fa59cef12cdcfecc627b3d24273699f390e71828921b2cbba2\n",
             "Successfully built pathtools\n",
             "Installing collected packages: smmap, gitdb, shortuuid, setproctitle, sentry-sdk, pathtools, GitPython, docker-pycreds, wandb\n",
@@ -452,6 +450,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {
+        "id": "2PScvyQdFSrL"
+      },
+      "outputs": [],
       "source": [
         "def gradient_penalty(critic, real, fake, device=\"cpu\"):\n",
         "    BATCH_SIZE, C, H, W = real.shape\n",
@@ -467,21 +470,17 @@
         "        create_graph=True,\n",
         "        retain_graph=True,\n",
         "    )[0]\n",
+        "    \n",
         "    gradient = gradient.view(gradient.shape[0], -1)\n",
         "    gradient_norm = gradient.norm(2, dim=1)\n",
         "    gradient_penalty = torch.mean((gradient_norm - 1) ** 2)\n",
         "    return gradient_penalty\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "2PScvyQdFSrL"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "H7JYkJ8yArKj"
       },
@@ -492,13 +491,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "N9ZmFtQmcOAl",
-        "outputId": "e1e77d7b-5d1b-4e29-b415-01c5be2dc603"
+        "outputId": "cbbc4b93-e5ff-4ab6-9337-8af9ee107e00"
       },
       "outputs": [
         {
@@ -545,18 +544,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
-        "id": "P7xv1l3zfB34",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 106
         },
-        "outputId": "d849f813-6e9c-4adb-bb60-2c74281ed667"
+        "id": "P7xv1l3zfB34",
+        "outputId": "58a08562-5d13-4c73-b8f5-44482a7698d1"
       },
       "outputs": [
         {
+          "output_type": "display_data",
           "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
             "application/javascript": [
               "\n",
               "        window._wandbApiKey = new Promise((resolve, reject) => {\n",
@@ -587,59 +590,52 @@
               "            })\n",
               "        });\n",
               "    "
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
             ]
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         },
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
             "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /root/.netrc\n"
           ]
         },
         {
+          "output_type": "display_data",
           "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
             "text/html": [
               "Tracking run with wandb version 0.13.1"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         },
         {
+          "output_type": "display_data",
           "data": {
-            "text/html": [
-              "Run data is saved locally in <code>/content/wandb/run-20220808_084646-2l0o3xam</code>"
-            ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "Run data is saved locally in <code>/content/wandb/run-20220808_173843-2ay0dc7n</code>"
             ]
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         },
         {
+          "output_type": "display_data",
           "data": {
-            "text/html": [
-              "Syncing run <strong><a href=\"https://wandb.ai/saquibali7/uncategorized/runs/2l0o3xam\" target=\"_blank\">distinctive-music-8</a></strong> to <a href=\"https://wandb.ai/saquibali7/uncategorized\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
-            ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "Syncing run <strong><a href=\"https://wandb.ai/saquibali7/uncategorized/runs/2ay0dc7n\" target=\"_blank\">noble-aardvark-12</a></strong> to <a href=\"https://wandb.ai/saquibali7/uncategorized\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
             ]
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         }
       ],
       "source": [
@@ -662,13 +658,14 @@
         "      opt_critic.step()  \n",
         "\n",
         "    ## Training of Generator\n",
-        "\n",
+        "    \n",
         "    gen_fake = critic(fake).reshape(-1)\n",
         "    loss_gen = -torch.mean(gen_fake)\n",
         "    gen.zero_grad()\n",
         "    loss_gen.backward()\n",
         "    opt_gen.step()\n",
         "\n",
+        "    \n",
         "  wandb.log({\"Generartor  Loss\": loss_gen, 'epoch':epoch })\n",
         "  wandb.log({\"Discriminator Loss\": critic_loss, 'epoch':epoch })\n",
         "\n",
@@ -711,20 +708,18 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import matplotlib.pyplot as plt"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "6kdJ9fNjGy5f"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "x.shape"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -732,36 +727,36 @@
         "id": "i4JpN5-MG3kf",
         "outputId": "2fd33b7e-4fcb-41cf-e161-1c035cef1e12"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "torch.Size([1, 3, 64, 64])"
             ]
           },
+          "execution_count": 51,
           "metadata": {},
-          "execution_count": 51
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "x.shape"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "x = x.detach()."
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "5KCEWBHWIcuq"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "x = x.detach()."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "plt.imshow(x[0].permute(1,2,0))"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -770,12 +765,11 @@
         "id": "McB7eCKZG961",
         "outputId": "7f68e388-26ea-4ecc-9e81-4fa6ab8bd824"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "error",
           "ename": "AttributeError",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
@@ -783,18 +777,21 @@
             "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'permute'"
           ]
         }
+      ],
+      "source": [
+        "plt.imshow(x[0].permute(1,2,0))"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "mfM7hrWfG_m4"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        ""
+      ]
     }
   ],
   "metadata": {
@@ -803,7 +800,7 @@
       "collapsed_sections": [],
       "name": "GAN3_WGAN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPpEj+5uGbTYKAtqilUTn5O",
+      "authorship_tag": "ABX9TyOmYT/YZJBtBYKDzlLjSHB9",
       "include_colab_link": true
     },
     "gpuClass": "standard",
